# backend

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
gestao/: admin.py  models.py  serializers.py  views.py
gestao/migrations/: 0001_initial.py  0002_remove_curso_tecnico_remove_disciplina_materia_and_more.py  0003_frequencia_aluno_frequencia_data_frequencia_and_more.py
